fix: enable GOTOOLCHAIN=auto for CI compatibility
- Added GOTOOLCHAIN=auto to all CI jobs
- Added toolchain directive to go.mod
- This allows Go to automatically download required toolchain
- Should resolve version compatibility issues with luxfi/log v1.1.22

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,9 @@ jobs:
   test:
     name: Test Before Release
     runs-on: ubuntu-latest
-    
+    env:
+      GOTOOLCHAIN: auto
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -38,7 +40,9 @@ jobs:
     name: Create Release
     needs: test
     runs-on: ubuntu-latest
-    
+    env:
+      GOTOOLCHAIN: auto
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
