--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
     strategy:
       matrix:
         go-version: ['1.22']
+    env:
+      GOTOOLCHAIN: auto
 
     steps:
     - name: Checkout code
@@ -33,8 +35,11 @@ jobs:
 
     - name: Install dependencies
       run: |
+        export GOTOOLCHAIN=auto
         go mod download
         make install-tools
+      env:
+        GOTOOLCHAIN: auto
 
     - name: Format check
       run: |
@@ -62,6 +67,8 @@ jobs:
     strategy:
       matrix:
         go-version: ['1.22']
+    env:
+      GOTOOLCHAIN: auto
 
     steps:
     - name: Checkout code
@@ -78,6 +85,8 @@ jobs:
   security:
     name: Security Scan
     runs-on: ubuntu-latest
+    env:
+      GOTOOLCHAIN: auto
 
     steps:
     - name: Checkout code
@@ -105,6 +114,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         go-version: ['1.22']
+    env:
+      GOTOOLCHAIN: auto
 
     steps:
     - name: Checkout code
