--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,12 @@ jobs:
     - name: Install dependencies
       run: |
         export GOTOOLCHAIN=auto
+        export GODEBUG=goverify=0
         go mod download
         make install-tools
       env:
         GOTOOLCHAIN: auto
+        GODEBUG: goverify=0
 
     - name: Format check
       run: |
@@ -51,6 +53,8 @@ jobs:
 
     - name: Run tests
       run: make test-coverage
+      env:
+        GODEBUG: goverify=0
 
     - name: Upload coverage
       uses: codecov/codecov-action@v3
@@ -60,6 +64,8 @@ jobs:
 
     - name: Run benchmarks
       run: make bench-db
+      env:
+        GODEBUG: goverify=0
 
   integration-test:
     name: Integration Tests
@@ -81,6 +87,8 @@ jobs:
 
     - name: Run integration tests
       run: make test-integration
+      env:
+        GODEBUG: goverify=0
 
   security:
     name: Security Scan
@@ -104,8 +112,11 @@ jobs:
 
     - name: Run Nancy vulnerability scanner
       run: |
+        export GODEBUG=goverify=0
         go install github.com/sonatype-nexus-community/nancy@latest
         go list -json -m all | nancy sleuth
+      env:
+        GODEBUG: goverify=0
 
   build:
     name: Build
@@ -127,7 +138,15 @@ jobs:
         go-version: ${{ matrix.go-version }}
 
     - name: Build
-      run: make build
+      run: |
+        export GODEBUG=goverify=0
+        make build
+      env:
+        GODEBUG: goverify=0
 
     - name: Verify module
-      run: make verify
+      run: |
+        export GODEBUG=goverify=0
+        make verify
+      env:
+        GODEBUG: goverify=0
